<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MemberStoreSampleActivity">

    <Button
        android:id="@+id/btn_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_lib_auth" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_lib_login" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_lib_update" />

    <Button
        android:id="@+id/btn_go_store_install_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_lib_go_store_install_page" />

    <Button
        android:id="@+id/btn_get_login_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_lib_login_user_info" />

</LinearLayout>