<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_go_member_store_sample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_member_store_sample"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_go_member_store_api_sample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_member_store_api_sample"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_go_partner_store_sample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_partner_store_sample"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_go_partner_store_api_sample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_partner_store_api_sample"
        android:textAllCaps="false" />
</LinearLayout>